--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 .backlog, .todo, .doing, .done{
     background-color: rgb(212, 208, 208);
     border-radius: 10px;
-    margin: 10px;
-    padding: 10px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    max-width: 300px;
     
 }
 
@@ -33,6 +36,11 @@ a{
     background-color: rgb(179, 210, 216);
     padding: 20px;
     border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    
 
 }
 h1{
@@ -46,4 +54,8 @@ h1{
 .g-signin2{
     display:flex;
     justify-content: center;
+}
+
+#tools-ikon a i{
+    margin-right: 10px;
 }
